# sdg-reo-04-05-26

./: .gitignore
uai3071390-genai-services-demand-generation-usecase/backend/: .coverage  .dockerignore  .env.example  .env.local  README.md  pyproject.toml  uv.toml
uai3071390-genai-services-demand-generation-usecase/backend/agents/event-history-assistant/: Dockerfile  README.md  pyproject.toml
uai3071390-genai-services-demand-generation-usecase/backend/agents/event-history-assistant/src/event_history/: __init__.py  config.py  main.py  prompts.py  schemas.py  simulate.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/event-history-assistant/src/event_history/api/: __init__.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/event-history-assistant/src/event_history/core/: __init__.py  agent_factory.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/event-history-assistant/src/event_history/tools/: __init__.py  stubs.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/event-history-assistant/tests/: conftest.py  test_health.py  test_routes.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/narrative-summary-assistant/: .dockerignore  Dockerfile  README.md  pyproject.toml
uai3071390-genai-services-demand-generation-usecase/backend/agents/narrative-summary-assistant/src/narrative_summary/: __init__.py  config.py  main.py  prompts.py  schemas.py  simulate.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/narrative-summary-assistant/src/narrative_summary/api/: __init__.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/narrative-summary-assistant/src/narrative_summary/core/: __init__.py  agent_factory.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/narrative-summary-assistant/src/narrative_summary/tools/: __init__.py  stubs.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/narrative-summary-assistant/tests/: conftest.py  test_health.py  test_routes.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/orchestrator/: Dockerfile  README.md  pyproject.toml
uai3071390-genai-services-demand-generation-usecase/backend/agents/orchestrator/src/orchestrator/: __init__.py  config.py  job_store.py  main.py  schemas.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/orchestrator/src/orchestrator/api/: __init__.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/orchestrator/src/orchestrator/graph/: __init__.py  nodes.py  pipeline.py  state.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/orchestrator/tests/: conftest.py  test_job_store.py  test_pipeline.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/question-answer-agent/: Dockerfile  README.md  pyproject.toml
uai3071390-genai-services-demand-generation-usecase/backend/agents/question-answer-agent/src/question_answer/: __init__.py  config.py  main.py  schemas.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/question-answer-agent/src/question_answer/api/: __init__.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/question-answer-agent/src/question_answer/core/: __init__.py  agent_factory.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/question-answer-agent/src/question_answer/middleware/: __init__.py  auth.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/question-answer-agent/src/question_answer/prompts/: __init__.py  oe_system_prompt.txt  re_system_prompt.txt
uai3071390-genai-services-demand-generation-usecase/backend/agents/question-answer-agent/tests/: conftest.py  test_agent.py  test_assessment_prompt.py  test_chat.py  test_health.py  test_tools_registry.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/risk-evaluation-assistant/: Dockerfile  README.md  pyproject.toml
uai3071390-genai-services-demand-generation-usecase/backend/agents/risk-evaluation-assistant/src/risk_evaluation/: __init__.py  config.py  main.py  prompts.py  schemas.py
uai3071390-genai-services-demand-generation-usecase/backend/agents/risk-evaluation-assistant/tests/: conftest.py  test_agent_factory_extended.py  test_health.py  test_legacy_core_utils.py  test_llm_assistant_extended.py  test_prompt_builder_extended.py  test_risk_analysis_persistence.py  test_risk_assessment_api_helpers.py  test_risk_assessment_creation.py  test_risk_assessment_creation_extended.py  test_routes.py  test_utils.py
uai3071390-genai-services-demand-generation-usecase/backend/certs/: GE_Enterprise_Root_CA_2_1.pem  ca.crt  ge-ca-bundle.pem
uai3071390-genai-services-demand-generation-usecase/backend/libs/commons/: README.md  pyproject.toml
uai3071390-genai-services-demand-generation-usecase/backend/libs/commons/src/commons/: __init__.py  databricks.py  identity.py  logging.py
uai3071390-genai-services-demand-generation-usecase/backend/libs/commons/tests/: conftest.py  test_databricks.py  test_identity.py  test_logging.py
uai3071390-genai-services-demand-generation-usecase/backend/services/data-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
uai3071390-genai-services-demand-generation-usecase/backend/services/data-service/src/data_service/: __init__.py  client.py  config.py  databricks_client.py  logging_utils.py  main.py  schema_metadata.py
uai3071390-genai-services-demand-generation-usecase/backend/services/data-service/tests/: conftest.py  test_assessments.py  test_client.py  test_databricks_client.py  test_db_sanitize.py  test_documents.py  test_equipment.py  test_equipment_service.py  test_er_service.py  test_health.py  test_heatmap_service.py  test_helpers.py  test_ibat_service.py  test_logging_utils.py  test_mcp_server_coverage.py  test_prism_service.py  test_retriever_service.py  test_routes_er.py  test_routes_heatmap.py  test_routes_ibat.py  test_routes_prism.py  test_routes_units.py  test_schema_metadata.py  test_train_service.py
(+194 files in other folders)
