# ==============================================================================
# SDG Risk Analyser — uv workspace root
# ==============================================================================
# This is the workspace root. It has NO [project] section and is NOT itself
# an installable package. All real packages live under agents/*, services/*,
# libs/* and are listed as workspace members below.
#
# Usage:
#   cd backend
#   SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt uv sync
#   uv run pytest
#   uv run ruff check .
#   uv run mypy agents/ services/ libs/
# ==============================================================================

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "agents/*",
    "services/*",
    "libs/*",
]

# Shared dev tools available across the entire workspace.
# Individual members declare their own runtime dependencies in their own
# pyproject.toml files. Dev tools (pytest, ruff, mypy, etc.) live here so a
# single `uv sync` installs everything needed for the full monorepo.
[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",         # needed for TestClient / async test clients

    # Linting & formatting
    "ruff>=0.4.0",
    "black>=25.0.0",
    "mypy>=1.10.0",

    # Type stubs
    "boto3-stubs[dynamodb,s3,sqs]>=1.34.0",
    "types-requests>=2.31.0",

    # Security scan
    "bandit[toml]>=1.7.0",

    # Env / config
    "python-dotenv>=1.0.0",

    # Pre-commit
    "pre-commit>=3.5.0",
]

# ------------------------------------------------------------------------------
# Ruff — replaces flake8 + isort + pyupgrade
# ------------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".venv", "venv", "__pycache__", ".git", ".mypy_cache",
    "htmlcov", ".coverage",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default arguments (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["commons", "data_service", "risk_evaluation", "narrative_summary",
                     "event_history", "question_answer", "orchestrator"]

# ------------------------------------------------------------------------------
# Black
# ------------------------------------------------------------------------------
[tool.black]
line-length = 120
target-version = ["py313"]
extend-exclude = '/(\.venv|venv|\.git|__pycache__|htmlcov)/'

# ------------------------------------------------------------------------------
# Mypy — strict mode
# ------------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = [
    "venv/",
    ".venv/",
    "tests/",
]

# ------------------------------------------------------------------------------
# Pytest
# ------------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["agents", "services", "libs"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: mark test as an integration test (skipped in CI without flag)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince211",
]
addopts = [
    "--import-mode=importlib",  # handles same-named test files across workspace members
    "--strict-markers",
    "-ra",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-config=pyproject.toml",
    "--cov-fail-under=80",
]

# ------------------------------------------------------------------------------
# Coverage
# ------------------------------------------------------------------------------
[tool.coverage.run]
source = ["agents", "services", "libs"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    ".venv/*",
    "venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_empty = true

# ------------------------------------------------------------------------------
# Bandit
# ------------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = [".venv", "venv", "__pycache__", ".git", "htmlcov"]
skips = ["B101"]  # assert is acceptable in tests
