[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdg-commons"
version = "0.1.0"
description = "Shared utilities: identity, logging, Databricks client, middleware stubs"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/commons"]
